what if I do not opt for hosting, what will happen? I can access public

--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,15 @@
 
 {
   "hosting": {
-    "source": "out",
+    "source": ".",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "frameworksBackend": {
+      "region": "us-central1"
+    }
   },
   "firestore": {
     "rules": "firestore.rules"
