--- a/firebase.json
+++ b/firebase.json
@@ -7,9 +7,7 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "frameworksBackend": {
-      "region": "us-central1"
-    }
+    "frameworksBackend": {}
   },
   "firestore": {
     "rules": "firestore.rules"
