Make the following changes:
,

Find this element:

  <Header>

with the

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
-
 {
   "hosting": {
+    "site": "shravyaplayhouse",
     "source": ".",
     "ignore": [
       "firebase.json",
@@ -9,9 +9,34 @@
     ]
   },
   "firestore": {
-    "rules": "firestore.rules"
+    "database": "(default)",
+    "location": "nam5",
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   },
   "storage": {
     "rules": "storage.rules"
-  }
+  },
+  "apphosting": {
+    "ignore": [
+      "node_modules",
+      ".git",
+      "firebase-debug.log",
+      "firebase-debug.*.log",
+      "functions"
+    ]
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ]
+    }
+  ]
 }
