--- a/workspace/firebase.json
+++ b/workspace/firebase.json
@@ -1,6 +1,7 @@
 
 {
   "hosting": {
+    "site": "shravyaplayhouse",
     "source": ".",
     "ignore": [
       "firebase.json",
@@ -16,3 +17,4 @@
     "rules": "storage.rules"
   }
 }
+
